compiler/tools/fpp-to-dict/test/top/arrayFwEventIdType.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/arrayFwEventIdType.fpp:4.1
array FwEventIdType = [3] F32
^
error: this F Prime framework type must be an alias of an integer type
